# meetup

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/assets/images/: 02-sample.html  03-sample2.html
docs/assets/src/: 02-bootstrap.html  03-sample.html
docs/git/: install.md  usage.md
docs/github/: install.md  setup.md  usage.md
docs/vscode/: c1byod.md  extensions.md  install.md  shortcut.md
docs/web/: 01.md  02.md  03.md  04.md  05.md  06.md  syllabus.md
overrides/: main.html
