[tool.poetry]
name = "meetup"
version = "0.1.0"
description = ""
authors = ["kota <52403688+yashikota@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
